# TDBS

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md
include/: project.h  project.hpp
src/: main.cpp  project.cpp
tests/: test.cpp
